# humanoid_Simulation_done

./: README.md  package.xml  setup.cfg  setup.py
config/: bridge.yaml  controllers.yaml
humannew/: localization_node.py  nao_wave_node.py
launch/: nao_world.launch.py
urdf/: nao.urdf.xacro
worlds/: robot.sdf
